<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lokhande.dinesh.applauncher.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_header"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <Button
        style="@style/NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/textView" />

    <Button
        style="@style/NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <Button
        style="@style/NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <Button
        style="@style/NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <Button
        style="@style/NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        style="@style/CapstoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/button5"
        android:layout_alignEnd="@+id/button5" />
</RelativeLayout>
